apps/argocd-istio/templates/istio-resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "argocd.kube"
# Uncomment below to enable HTTPS
#      tls:
#        httpsRedirect: true
#    - port:
#        number: 443
#        name: https
#        protocol: HTTPS
#      hosts:
#        - "argocd.kube"
#      tls:
#        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-server
spec:
  hosts:
  - argocd.kube
  gateways:
    - argocd-gateway
  http:
    - route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
